--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
                         <p>Embora eu seja uma recém-chegada no fascinante mundo da tecnologia, estou ansiosa para moldar meu conhecimento com as cores das novas experiências!</p>
 
                         <div class="btn-social">
-                            <a href=""><button><i class="bi bi-instagram"></i></button></a>
-                            <a href=""><button><i class="bi bi-linkedin"></i></button></a>
-                            <a href=""><button><i class="bi bi-whatsapp"></i></button></a>
+                            <a href="https://instagram.com/iluminnathi?igshid=OGQ5ZDc2ODk2ZA=="><button><i class="bi bi-instagram"></i></button></a>
+                            <a href="https://www.linkedin.com/in/nathalia-caldonho/"><button><i class="bi bi-linkedin"></i></button></a>
+                            <a href="https://wa.me/5528999055764"><button><i class="bi bi-whatsapp"></i></button></a>
                         </div><!--btn-social-->
 
                     </div><!--txt-sobre-->
