--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <section class="formulário" id="formulário">
             <div class="interface">
                 <h2 class="titulo">FALA <span>COMIGO</span>!</h2>
-                <form method="POST"  action="./envia.php">
+                <form action="./envia.php" method="post" >
                     <input type="text" name="nome" id="nome" placeholder="Digite seu nome" required>
                     <input type="text" name="email" id="email" placeholder="Digite seu e-mail" required>
                     <input type="text" name="telefone" id="telefone" placeholder="Digite seu celular">
