--- a/index.html
+++ b/index.html
@@ -13,18 +13,17 @@
 <!--BOOTSTRAP ICONS-->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 <!--BOOTSTRAP ICONS-->
-<script src="menu.js" defer></script>
+<script src="./js/menu-fixo.js"></script>
+<script src="./js/scroll.js"></script>
+<script src="./js/menu-mobile.js" defer></script>
 </head>
 
 <body>
-    
-    <header>
+    <header id="header">
         <div class="interface">
-
-
             <div class="logo">
                 <a href="#">
-                    <img src="/img/NMC-PhotoRoom.png-PhotoRoom.png" alt="logo">
+                    <img src="./img/NMC DEV-LOGO.png" alt="logo">
                 </a>
             </div><!--logo-->
 
@@ -36,12 +35,34 @@
                      <!--<li><a href="#">Projetos</a></li>--> 
                     </ul>
                 </nav>
-
+                <div class="linha-menu"></div> <!-- Adicione esta linha -->
                 <div class="btn-contato">
                     <a href="#formulário">
-                        <button>Contato</button>
+                        <button id="buttonHeader">Contato</button>
                     </a>
+                </div> <!--btn-contato-->
+
+                <div class="btn-abrir-menuMobile" id="btn-menu-mobile">
+                    <i class="bi bi-list"></i>
                 </div>
+
+                <div class="menu-mobile" id="menu-mobile">
+                    <div class="btn-fechar">
+                        <i class="bi bi-x-circle"></i>
+                    </div><!--btn-fechar-->
+                        <nav>
+                            <ul>
+                                <li><a href="#topo-do-site">Início</a></li>
+                                <li><a href="#especialidades">Especialidades</a></li>
+                                <li><a href="#sobre">Sobre</a></li>
+                                <li><a href="#formulário">contato</a></li>
+                             <!--<li><a href="#">Projetos</a></li>--> 
+                            </ul>
+                        </nav>
+                </div><!--menu-mobile-->
+
+                <div class="overlay-menu"></div>
+
         </div> <!--interface-->
     </header>
 
@@ -54,11 +75,11 @@
                         <p>"Na vastidão das estrelas digitais, onde cada linha de código é uma constelação a ser desvendada, 
                             a jornada pelo universo web se torna iluminada pela curiosidade, que serve como a bússola a guiar os desenvolvedores em sua exploração."</p>
 
-                        <div class="btn-contato">
-                            <a href="#formulário">
-                                <button>Entre em contato</button>
-                            </a>
-                        </div><!--btn-contato-->
+                            <div class="btn-contato">
+                                <a href="#formulário">
+                                    <button id="buttonTop">Entre em contato</button>
+                                </a>
+                            </div>
                     </div><!--txt-topo-site-->
 
                     <div class="img-topo-site">
@@ -143,7 +164,7 @@
             <div class="line-footer">
                 <div class="flex">
                     <div class="logo-footer">
-                        <img src="/img/NMC-PhotoRoom.png-PhotoRoom.png" alt="">
+                        <img src="/img/NMC DEV-LOGO.png" alt="">
                     </div><!--logo-footer-->
                     <div class="btn-social">
                         <a href="https://instagram.com/iluminnathi?igshid=OGQ5ZDc2ODk2ZA=="><button><i class="bi bi-instagram"></i></button></a>
@@ -157,6 +178,5 @@
             </div><!--line-footer-->
         </div><!--interface-->
     </footer>
-
 </body>
 </html>
