correção de texto hmtl

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="especialidades-box">
                         <i class="bi bi-code-slash"></i>
                         <h3>FRONT-END</h3>
-                        <P>Possui conhecimento nas tecnologias de desenvolvimento front-end, tais como o HTML, CSS, Bootstrap e React.</P>
+                        <P>Conhecimento nas tecnologias de desenvolvimento front-end, tais como o HTML, CSS, Bootstrap e React.</P>
                     </div><!--especialidades-box-->
                     <div class="especialidades-box">
                         <i class="bi bi-wordpress"></i>
