correção texto hmtl

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <li><a href="#topo-do-site">Início</a></li>
                                 <li><a href="#especialidades">Especialidades</a></li>
                                 <li><a href="#sobre">Sobre</a></li>
-                                <li><a href="#formulário">contato</a></li>
+                                <li><a href="#formulário">Contato</a></li>
                              <!--<li><a href="#">Projetos</a></li>--> 
                             </ul>
                         </nav>
