update dos ícones de redes sociais

--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
                             <a href="https://instagram.com/iluminnathi?igshid=OGQ5ZDc2ODk2ZA=="><button><i class="bi bi-instagram"></i></button></a>
                             <a href="https://www.linkedin.com/in/nathalia-caldonho/"><button><i class="bi bi-linkedin"></i></button></a>
                             <a href="https://wa.me/5528999055764"><button><i class="bi bi-whatsapp"></i></button></a>
+                            <a href="https://github.com/NathyM011"><button><i class="bi bi-github"></i></i></button></a>
+
                         </div><!--btn-social-->
 
                     </div><!--txt-sobre-->
@@ -170,6 +172,7 @@
                         <a href="https://instagram.com/iluminnathi?igshid=OGQ5ZDc2ODk2ZA=="><button><i class="bi bi-instagram"></i></button></a>
                         <a href="https://www.linkedin.com/in/nathalia-caldonho/"><button><i class="bi bi-linkedin"></i></button></a>
                         <a href="https://wa.me/5528999055764"><button><i class="bi bi-whatsapp"></i></button></a>
+                        <a href="https://github.com/NathyM011"><button><i class="bi bi-github"></i></i></button></a>
                     </div><!--btn-social-->
                 </div><!--flex-->
             </div><!--line-footer-->
